fixed wrap branding placement when toolbar is open

--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -18,6 +18,10 @@ header .navbar-container .row{margin:0px!important;}*/
 	margin-top:2em;
 }
 
+.body--glazed-nav-mobile.user-logged-in.toolbar-tray-open .wrap-branding{
+	margin-top:4em;
+}
+
 .body--glazed-nav-mobile #navbar { height:60px!important; }
 .body--glazed-nav-mobile .body--glazed-nav-mobile .glazed-header #logo { padding-bottom: 10px; }
 .body--glazed-nav-mobile .glazed-header #glazed-menu-toggle { padding: 2px 32px 16px 0px; }
